--- a/fronted/package.json
+++ b/fronted/package.json
@@ -9,8 +9,8 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "antd": "^3.20.5",
-    "query-string": "^6.13.8",
+    "axios": "^0.21.1",
+    "form-data": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
@@ -44,7 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "babel-plugin-import": "^1.12.0"
-  }
+  "proxy": "http://3.35.184.173:3001/"
 }
